--- a/CRMPhone/NLog.config
+++ b/CRMPhone/NLog.config
@@ -24,14 +24,19 @@
     -->
 
     <!--Write events to a file with the date in the filename.-->
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
+    <target xsi:type="File" name="debug" fileName="${basedir}/logs/${shortdate}.log"
+             layout="${longdate} ${uppercase:${level}} ${message}" />
+    <target xsi:type="File" name="error" fileName="${basedir}/logs/${shortdate}_error.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
+
   </targets>
 
   <rules>
     <!-- add your logging rules here -->
 
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
-    <logger name="*" minlevel="Debug" writeTo="f" />
+
+    <logger name="*" level="Debug" writeTo="debug" />
+    <logger name="*" level="Error" writeTo="error" />
+
   </rules>
 </nlog>
