[~] - Привязка мастеров к адресам и услугам

--- a/CRMPhone/CRMPhone.csproj
+++ b/CRMPhone/CRMPhone.csproj
@@ -139,6 +139,9 @@
     <Compile Include="Controls\NotifyRequestControl.xaml.cs">
       <DependentUpon>NotifyRequestControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\Admins\WorkerHouseAndTypeAddOrEditDialog.xaml.cs">
+      <DependentUpon>WorkerHouseAndTypeAddOrEditDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\GetScInfoDialog.xaml.cs">
       <DependentUpon>GetScInfoDialog.xaml</DependentUpon>
     </Compile>
@@ -230,6 +233,7 @@
     <Compile Include="ViewModel\Admins\SpecialityDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\StreetAdminDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\WorkerAdminDialogViewModel.cs" />
+    <Compile Include="ViewModel\Admins\WorkerHouseAndTypeAdminDialogViewModel.cs" />
     <Compile Include="ViewModel\AlertAndWorkControlContext.cs" />
     <Compile Include="ViewModel\ChangeExecuterDialogViewModel.cs" />
     <Compile Include="ViewModel\EditAddressOnRequestDialogViewModel.cs" />
@@ -332,6 +336,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\NotifyRequestControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Dialogs\Admins\WorkerHouseAndTypeAddOrEditDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
