--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -18,6 +18,9 @@
     "AccessExpireMinutes": 1800, //30 days
     "RefreshExpireDays": 365 // 1 year
   },
+  "Settings": {
+    "RootFolder": "F:\\RequestAttachments\\"
+  },
   "Security": {
     "CORS": {
       "Enabled": false
