--- a/PjSIPClient/PjSIPClient.csproj
+++ b/PjSIPClient/PjSIPClient.csproj
@@ -13,9 +13,11 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -36,6 +38,9 @@
   <ItemGroup>
     <Reference Include="org.pjsip.pjsua2, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\pjsip-pjsua2-csharp.2.6.170807.1\lib\net45\org.pjsip.pjsua2.dll</HintPath>
+    </Reference>
+    <Reference Include="PJSip.Interop, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\PJSip.Interop.0.7.4\lib\PJSip.Interop.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -98,4 +103,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\PJSip.Interop.0.7.4\build\PJSip.Interop.targets" Condition="Exists('..\packages\PJSip.Interop.0.7.4\build\PJSip.Interop.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\PJSip.Interop.0.7.4\build\PJSip.Interop.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PJSip.Interop.0.7.4\build\PJSip.Interop.targets'))" />
+  </Target>
 </Project>
