--- a/PjSIPClient/packages.config
+++ b/PjSIPClient/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="PJSip.Interop" version="0.7.4" targetFramework="net461" />
   <package id="pjsip-pjsua2-csharp" version="2.6.170807.1" targetFramework="net461" />
 </packages>
