--- a/PjSIPClient/PjSIPClient.csproj
+++ b/PjSIPClient/PjSIPClient.csproj
@@ -68,6 +68,7 @@
     <Compile Include="CommandHandler.cs" />
     <Compile Include="MyAccount.cs" />
     <Compile Include="MyCall.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="SipViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
