[~] - Выгрузка списка обзвона + изменение статуса в вебе

--- a/DevinoSenter/App.config
+++ b/DevinoSenter/App.config
@@ -6,17 +6,22 @@
   <appSettings>
     <add key="CallCenterIP" value="192.168.1.130" />
     <add key="DevinoUser" value="cmscms" />
-    <add key="DevinoPassword" value="p57w(.O|8P" />
+    <add key="DevinoPassword" value="password" />
     <add key="EnableSend" value="true" />
   </appSettings>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="SmsServiceSoap" />
+                <binding name="SmsServiceSoap">
+                    <security mode="Transport" />
+                </binding>
+                <binding name="SmsServiceSoap1" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://ws-wsdl.devinotele.com/SmsService.asmx" binding="basicHttpBinding" bindingConfiguration="SmsServiceSoap" contract="Devino.SmsServiceSoap" name="SmsServiceSoap" />
+            <endpoint address="https://ws-wsdl.devinotele.com/SmsService.asmx"
+                binding="basicHttpBinding" bindingConfiguration="SmsServiceSoap"
+                contract="Devino.SmsServiceSoap" name="SmsServiceSoap" />
         </client>
     </system.serviceModel>
 <system.data>
