--- a/RequestService/RequestServiceImpl.csproj
+++ b/RequestService/RequestServiceImpl.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Dto\RingUpConfigDto.cs" />
     <Compile Include="Dto\RingUpHistoryDto.cs" />
     <Compile Include="Dto\RingUpImportDto.cs" />
+    <Compile Include="Dto\RingUpInfoDto.cs" />
     <Compile Include="Dto\RoleDto.cs" />
     <Compile Include="Dto\ServiceCompanyDto.cs" />
     <Compile Include="Dto\ServiceDto.cs" />
