--- a/RequestService/RequestServiceImpl.csproj
+++ b/RequestService/RequestServiceImpl.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Dto\RecuestRatingDto.cs" />
     <Compile Include="Dto\RequestForListDto.cs" />
     <Compile Include="Dto\RequestInfoDto.cs" />
+    <Compile Include="Dto\RequestRatingListDto.cs" />
     <Compile Include="Dto\RequestStateDto.cs" />
     <Compile Include="Dto\RequestTypeDto.cs" />
     <Compile Include="Dto\RequestUserDto.cs" />
