--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -19,7 +19,9 @@
     "RefreshExpireDays": 365 // 1 year
   },
   "Settings": {
-    "RootFolder": "F:\\RequestAttachments\\"
+    "RootFolder": "F:\\RequestAttachments\\",
+    "AmiHost": "192.168.1.130",
+    "AmiPort" : 5038
   },
   "Security": {
     "CORS": {
