[~] - правки по интерфейсу + звонок исполнителю

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -15,7 +15,7 @@
   "Auth": {
     "Issuer": "DISPEX",
     "Key": "werer4rre398181ewrewb37419a9274163a214e21fe",
-    "AccessExpireMinutes": 1800, //30 days
+    "AccessExpireMinutes": 1800, //30 hours
     "RefreshExpireDays": 365 // 1 year
   },
   "Settings": {
