--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -7,9 +7,13 @@
   <ItemGroup>
     <None Remove="templates\act.mrt" />
     <None Remove="templates\exportToExcel.mrt" />
+    <None Remove="templates\requests.mrt" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="templates\requests.mrt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="templates\act.mrt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -23,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="4.5.2.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.2" />
