--- a/CRMPhone/App.config
+++ b/CRMPhone/App.config
@@ -10,6 +10,7 @@
   </startup>
   <appSettings>
     <!--<add key="CallCenterIP" value="37.140.198.61" />-->
+    <!--<add key="CallCenterIP" value="192.168.10.1" />-->
     <add key="CallCenterIP" value="192.168.1.130" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
