--- a/CRMPhone/CRMPhone.csproj
+++ b/CRMPhone/CRMPhone.csproj
@@ -94,6 +94,7 @@
       <HintPath>..\packages\Stimulsoft.Report.2014.1.1900.0\lib\net20\Stimulsoft.Report.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Activities" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
