--- a/CRMPhone/packages.config
+++ b/CRMPhone/packages.config
@@ -5,6 +5,7 @@
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net40" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net40" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net40" />
   <package id="NLog" version="4.4.8" targetFramework="net40" />
   <package id="NLog.Config" version="4.4.8" targetFramework="net40" />
   <package id="NLog.Schema" version="4.4.8" targetFramework="net40" />
