--- a/CRMPhone/CRMPhone.csproj
+++ b/CRMPhone/CRMPhone.csproj
@@ -154,6 +154,9 @@
     <Compile Include="Controls\ServiceCompanyFondControl.xaml.cs">
       <DependentUpon>ServiceCompanyFondControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\Admins\BindRequestTypeToAddressDialog.xaml.cs">
+      <DependentUpon>BindRequestTypeToAddressDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\Admins\BindCompanyToWorkerDialog.xaml.cs">
       <DependentUpon>BindCompanyToWorkerDialog.xaml</DependentUpon>
     </Compile>
@@ -268,6 +271,7 @@
     </Compile>
     <Compile Include="ViewModel\AddRequestToCallDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\BindAddressToWorkerDialogViewModel.cs" />
+    <Compile Include="ViewModel\Admins\BindRequestTypeToAddressDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\BindCompanyToWorkerDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\BlackListPhoneDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\RingUpNewDialogViewModel.cs" />
@@ -407,6 +411,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\ServiceCompanyFondControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Dialogs\Admins\BindRequestTypeToAddressDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
