--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="MySql.Data" Version="6.9.12" />
     <PackageReference Include="NLog" Version="4.5.9" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.6.0" />
+    <PackageReference Include="RestSharp" Version="106.6.10" />
   </ItemGroup>
 
   <ItemGroup>
