--- a/WebApi/nlog.config
+++ b/WebApi/nlog.config
@@ -12,9 +12,13 @@
   <targets>
     <target xsi:type="File" name="default" fileName="${basedir}\log\${shortdate}.log"
             layout="${longdate}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+    <target xsi:type="File" name="debug" fileName="${basedir}\log\${shortdate}_debug.log"
+          layout="${longdate}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+
   </targets>
 
   <rules>
     <logger name="*" minlevel="Info" writeTo="default" />
+    <logger name="WebApi.*" level="Debug" writeTo="debug" />
   </rules>
 </nlog>
