--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -20,6 +20,7 @@
   },
   "Settings": {
     "RootFolder": "F:\\RequestAttachments\\",
+    "DocRootFolder": "F:\\DocAttachments\\",
     "AmiHost": "192.168.1.130",
     "AmiPort" : 5038
   },
