--- a/AppNotificationForWeb/App.config
+++ b/AppNotificationForWeb/App.config
@@ -5,9 +5,7 @@
     </startup>
   <appSettings>
     <add key="CallCenterIP" value="192.168.1.130" />
-    <add key="DevinoUser" value="cmscms" />
-    <add key="DevinoPassword" value="password" />
-    <add key="EnableSend" value="true" />
+    <add key="OneSignalKey" value="cmscms" />
   </appSettings>
     <system.serviceModel>
         <bindings />
